# Network-Security-Monitor

./: .env.example  .env.vercel.example  .gitignore  DRILL_NOTES.md  README.md  RUNBOOK.md  config.py  config_profiles.json  main.py  pyproject.toml  pytest.ini  requirements.txt  run.py  vercel.json
.github/workflows/: ci.yml
api/: __init__.py  index.py
app/: __init__.py
app/api/: __init__.py  alerts.py  monitor.py  stats.py  threats.py
app/core/: alert_manager.py  config.py  models.py  monitor.py  packet_analyzer.py  threat_detector.py  utils.py
app/templates/: index.html
deploy/: bootstrap.sh
docs/: PRODUCTION_PERSISTENCE_PLAN.md  SENTINELNET_PRD.md  SENTINELNET_ROADMAP.md  VERCEL_DEPLOYMENT.md  VERCEL_DEPLOY_NOW.md  WEEK1_EXECUTION_PLAN.md
network_security_monitor/: __init__.py  __main__.py  alert_manager.py  cli.py  config.py  dashboard.py  device_inventory.py  incident_manager.py  models.py  monitor.py  network_topology.py  packet_analyzer.py  smoke_test.py  soc_automation.py  storage.py  threat_detector.py  threat_intel.py  unauthorized_devices.py
nsm/: __init__.py  alert.py  detector.py  monitor.py  packet.py  visualization.py
tests/: test_alert.py  test_alert_manager.py  test_api.py  test_config.py  test_dashboard.py  test_detector.py  test_device_inventory.py  test_incident_manager.py  test_models.py  test_monitor.py  test_network_topology.py  test_packet.py  test_packet_analyzer.py  test_smoke_test.py  test_soc_automation.py  test_storage.py  test_threat_detector.py  test_threat_intel.py  test_unauthorized_devices.py  test_visualization.py
(+12 files in other folders)
